--- a/app/views/clothings/_new_cloth_form.html.erb
+++ b/app/views/clothings/_new_cloth_form.html.erb
@@ -4,11 +4,11 @@
     </h3>
     <%= simple_form_for @clothing, html: { multipart: true } do |f| %>
       <div class="form-group">
-        <%= f.input :name, placeholder: 'Name' %>
+        <%= f.input :name, placeholder: 'Product name', input_html: { style: "font-style: italic; color: #999;" } %>
       </div>
 
       <div class="form-group">
-        <%= f.input :price %>
+        <%= f.input :price, input_html: { min: 0, step: 100 }, placeholder: '¥...' %>
       </div>
 
       <div class="form-group">
@@ -16,12 +16,16 @@
       </div>
 
       <div class="form-group">
-        <%= f.input :address %>
+        <%= f.input :address, placeholder: 'Store address', input_html: { style: "font-style: italic; color: #999;" } %>
       </div>
 
       <div class="form-group">
         <%= f.input :photo, as: :file, label: "Upload an Image" %>
       </div>
+
+      <%# <div class="form-group"> %>
+        <%#= f.input :photos, as: :file, label: "Upload Image(s)", input_html: { multiple: true } %>
+      <%# </div> %>
 
       <div class="form-group">
         <%= f.label :country, "Select Country", class: "d-block" %>
@@ -31,12 +35,12 @@
       </div>
 
       <div class="form-group pt-3">
-        <%= f.input :color %>
+        <%= f.input :color, placeholder: 'Add color', input_html: { style: "font-style: italic; color: #999;" } %>
       </div>
 
 
       <div class="form-group">
-        <%= f.input :description %>
+        <%= f.input :description, placeholder: 'Describe your item here', input_html: { style: "font-style: italic; color: #999;" } %>
       </div>
 
 
